* 2018.12.15 - [FGG] fixed registration of Clang from Android NDK >= 17 with LLVM C++ lib

* 2018.12.11 - [FGG] fixed ck snapshot artifact (with Leo's feedback)

* 2018.12.05 - [FGG] moved xsmm and netcdf soft and package from ck-scc18
               [FGG] added detection of libraries via .settings and spack yaml
               [FGG] added different OpenMPI packages

* 2018.12.05 - [FGG] added --search_dir (search only in this dir)
                     useful for Spack and EasyBuild

* 2018.12.03 - [FGG] improved reuse_deps with different tags
                     improved detection of Intel MPI
                     added HDF5 package for seissol compatibility

* 2018.12.02 - [FGG] added "ck set kernel var.minimize_soft_detect_output=yes"
                     to minimize soft detection output (off by default)
             - [FGG] added "ck detect soft --search_depth={num}"
                     and "ck set kernel var.force_soft_search_depth={num}"

* 2018.11.29 - added workflow description for repository listing

* 2018.11.28 - added info about failed packages (how to report)

* 2018.11.26 - added API to listed modules

* 2018.11.21 - [FGG and Stephen Herbein] do not prune symbolic links
               when detecting software (otherwise have strange paths)

* 2018.11.14 - [FGG and Stephen Herbein] improved soft search in HPC 
               (ck set kernel var.soft_search_dirs=dir1,dir2,...)

* 2018.09.25 - [FGG] added package cmake 3.12.2
               [FGG] fixed bug reported in https://github.com/ctuning/ck-env/issues/77

* 2018.09.24 - [FGG] added packages for LLVM 6.0.1 and 7.0.0

* 2018.09.02 - [FGG] added missing customize.py for lapack

* 2018.08.16 - [FGG] added Python deps to Scons

* 2018.08.14 - [Leo] added first automated tests
               [FGG] moved outdated JDK 9 to ck-old-packages repo, and added JDK 8.181 and JDK 10.0.2

* 2018.07.27 - [Leo] adding support for permanent entries